--- a/dogs-web/src/main/webapp/scss/main.scss
+++ b/dogs-web/src/main/webapp/scss/main.scss
@@ -1,4 +1,5 @@
 $accent-color: #6E45AC;
+$border-color: lighten($accent-color, 30%);
 $margin: 15px;
 $font-family: "Segoe UI", "Myriad Pro", sans-serif;
 
@@ -33,7 +34,7 @@ a {
 
 header {
     text-align: left;
-    border-bottom: 1px solid $accent-color;
+    border-bottom: 1px solid $border-color;
     padding-bottom: $margin;
     margin-bottom: $margin;
     
@@ -79,6 +80,11 @@ h1,h2,h3 {
     color: $accent-color;
 }
 
+.info {
+    color: #aaa;
+    float: right;
+}
+
 .btn {
     display: inline-block;
     padding: 6px 10px;
@@ -90,6 +96,7 @@ h1,h2,h3 {
     border: 0;
     border-radius: 5px;
     white-space: nowrap;
+    vertical-align: baseline;
     
     &:hover {
         @include linearGradient($accent-color, darken($accent-color, 10%));
@@ -164,9 +171,9 @@ dd, input, select {
 }
 
 footer {
-    text-align: center;
-    border-top: 1px solid $accent-color;
-    padding-top: $margin;
+    text-align: right;
+    border-top: 1px solid $border-color;
+    font-size: 0.8em;
     margin-top: $margin;
     color: desaturate($accent-color, 100%);
 }
