Cleaned up DogController and added validations to DogDTO

--- a/dogs-web/src/main/webapp/scss/main.scss
+++ b/dogs-web/src/main/webapp/scss/main.scss
@@ -154,11 +154,33 @@ dt, label {
     font-weight: bold;
     font-size: 0.8em;
 }
-dd, input, select {
+dd, .input {
     display: block;
     margin: 0 0 1em;
 }
 
+.input {
+    input, select {
+        display: inline-block;
+    }
+}
+
+span.error {
+    color: #D68787;
+    &:before {
+        content: "!";
+        display: inline-block;
+        background: #D68787;
+        color: #fff;
+        width: 1.5em;
+        height: 1.5em;
+        border-radius: 100%;
+        text-align: center;
+        margin-right: 0.5em;
+        font-size: 0.8em;
+        line-height: 1.5em;
+    }
+}
 
 .alert {
     
