--- a/dogs-web/src/main/webapp/scss/main.scss
+++ b/dogs-web/src/main/webapp/scss/main.scss
@@ -57,6 +57,7 @@ header {
         padding-top: 3em;
         ul, li {
             display: inline;
+            white-space: nowrap;
         }
         
         a {
@@ -166,7 +167,13 @@ dd, .input {
 }
 
 span.error {
+    display: inline-block;
+    padding-left: 2em;
+    text-indent: -1.6em;
     color: #D68787;
+    vertical-align: top;
+    text-transform: uppercase;
+    
     &:before {
         content: "!";
         display: inline-block;
@@ -179,6 +186,7 @@ span.error {
         margin-right: 0.5em;
         font-size: 0.8em;
         line-height: 1.5em;
+        text-indent: 0;
     }
 }
 
