--- a/dogs-web/src/main/webapp/scss/main.scss
+++ b/dogs-web/src/main/webapp/scss/main.scss
@@ -111,6 +111,10 @@ h1,h2,h3 {
     }
 }
 
+form.form-inline {
+    display: inline;
+}
+
 table {
     $table-margin: 3px 10px;
     border-spacing: 0; 
